--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,5 @@
 -->
 <resources>
     <string name="app_name">SQL Basics</string>
-    <string name="instruction">The database is ready!\n\nUse the database inspector in Android Studio to run SQL commands.</string>
+    <string name="instruction">Use the database inspector in Android Studio to run SQL commands.</string>
 </resources>
